Fix error of text align

--- a/static/footer.css
+++ b/static/footer.css
@@ -13,6 +13,9 @@
 }
 
 .footer .footer-host {
-    font-weight: 200;
     text-align: right;
+}
+
+.footer-host span {
+    font-weight: 200;
 }
